--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "node":">=14 <15",
+  "engines": {"node":">=14 <15"},
+  
   "dependencies": {
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
